# perigee

./: README.md  WORKSPACE
beacon-chain/blockchain/: log_test.go
beacon-chain/node/: node.go
beacon-chain/p2p/: config.go  discovery.go  interfaces.go  service.go
beacon-chain/p2p/peers/: status.go
beacon-chain/p2p/peers/scorers/: gossip_scorer.go
beacon-chain/p2p/scorer/: observation.go  observation_test.go  peer_selector_manager.go  peer_selector_manager_test.go  score.go  score_test.go  scorer_test.go  selector.go  selector_test.go  ucb.go  util.go
beacon-chain/sync/: handlers.go  service.go  subscribe_peeraware.go  subscriber.go  validate_beacon_blocks.go
cmd/: flags.go
cmd/beacon-chain/: main.go  usage.go
vcs/: BUILD.bazel  client.go  client_test.go  coordinate.go  coordinate_test.go  euclidean_vector.go  euclidean_vector_test.go  history_stat.go  history_stat_test.go  k_means.go  k_means_test.go  listener.go  listener_test.go  lowpass_filter.go  lowpass_filter_test.go  node_by_cluster.txt  nodes.go  scheduler.go  server.go  server_test.go  test_plot.py  utils.go  utils_test.go  vcs.go  vcs_test.go  virtual_coordinate.go  virtual_coordinate_test.go  vivaldi_model.go  vivaldi_model_test.go
