load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")


# Define the Go library for your vcs package
go_library(
    name = "vcs_lib",
    srcs = [
        "euclidean_vector.go",
        "utils.go",
        "history_stat.go",
        "coordinate.go",
        "vivaldi_model.go",
        "virtual_coordinate.go",
        "k_means.go",
        "vcs.go",
        "listener.go",
        "nodes.go",
        "client.go",
        "server.go",
        "scheduler.go",
        "lowpass_filter.go"
    ],
    importpath = "github.com/prysmaticlabs/prysm/v5/vcs",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
        "@com_github_ethereum_go_ethereum//p2p/enode",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_libp2p_go_libp2p//core/peer:go_default_library",
    ]
)

# Define the test for EuclideanVector (euclidean_vector_test.go)
go_test(
    name = "euclidean_vector_test",
    srcs = ["euclidean_vector_test.go"],
    embed = [":vcs_lib"],  # Embed the vcs library into the test
)

# Define the test for utils (utils_test.go)
go_test(
    name = "utils_test",
    srcs = ["utils_test.go"],
    embed = [":vcs_lib"],  # Embed the vcs library into the test
    deps = [
        "@com_github_libp2p_go_libp2p//core/peer:go_default_library",
    ]
)

# Define the test for history_stat (history_stat_test.go)
go_test(
    name = "history_stat_test",
    srcs = ["history_stat_test.go"],
    embed = [":vcs_lib"],  # Embed the vcs library into the test
)

# Define the test for Coordinate (coordinate_test.go)
go_test(
    name = "coordinate_test",
    srcs = ["coordinate_test.go"],
    embed = [":vcs_lib"],  # Embed the vcs library into the test
)

# Define the test for Vivaldi Model (vivaldi_model_test.go)
go_test(
    name = "vivaldi_model_test",
    srcs = ["vivaldi_model_test.go"],
    embed = [":vcs_lib"],  # Embed the vcs library into the test
)

# Define the test for Virtual Coordinate(virtual_coordinate_test.go)
go_test(
    name = "virtual_coordinate_test",
    srcs = ["virtual_coordinate_test.go"],
    embed = [":vcs_lib"],  # Embed the vcs library into the test
)

# Define the test for K means(k_means_test.go)
go_test(
    name = "k_means_test",
    srcs = ["k_means_test.go"],
    embed = [":vcs_lib"],  # Embed the vcs library into the test
    deps = ["@com_github_ethereum_go_ethereum//p2p/enode"]
)

# Define the test for VCS(vcs_test.go)
go_test(
    name = "vcs_test",
    srcs = ["vcs_test.go"],
    embed = [":vcs_lib"],  # Embed the vcs library into the test
)

# Define the test for Listener (listener_test.go)
go_test(
    name = "listener_test",
    srcs = ["listener_test.go"],
    embed = [":vcs_lib"],  # Embed the vcs library into the test
    deps = [
        "@com_github_ethereum_go_ethereum//p2p/enode",
    ]
)

# Define the test for Client(client_test.go)
go_test(
    name = "client_test",
    srcs = ["client_test.go"],
    embed = [":vcs_lib"],  # Embed the vcs library into the test
)

# Define the test for Server(server_test.go)
go_test(
    name = "server_test",
    srcs = ["server_test.go"],
    embed = [":vcs_lib"],  # Embed the vcs library into the test
)

# Define the test for Scheduler(scheduler_test.go)
go_test(
    name = "scheduler_test",
    srcs = ["scheduler_test.go"],
    embed = [":vcs_lib"],  # Embed the vcs library into the test
)

# Define the test for Low pass filter(lowpass_filter_test.go)
go_test(
    name = "lowpass_filter_test",
    srcs = ["lowpass_filter_test.go"],
    embed = [":vcs_lib"],  # Embed the vcs library into the test
)